Barebones of learning website

--- a/main/index.html
+++ b/main/index.html
@@ -5,12 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Learning Website</title>
 
+        <!-- Google fonts for website using indie flower -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <nav>
             <div class="container nav__container">
-                <a href="index.html" class="nav__logo">Learning Website</a>
+                <a href="index.html" class="nav__logo"><img src="images/redpanda.png" alt="Logo" class="logo"><span>Learning Website</span></a>                
                 <ul class="nav__menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="lessons.html">Lessons</a></li>
