--- a/main/index.html
+++ b/main/index.html
@@ -17,15 +17,41 @@
             <div class="container nav__container">
                 <a href="index.html" class="nav__logo"><img src="images/redpanda.png" alt="Logo" class="logo"><span>Learning Website</span></a>                
                 <ul class="nav__menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="lessons.html">Lessons</a></li>
-                    <li><a href="progess.html">Progress/habit tracker</a></li>
-                    <li><a href="profile.html">Profile</a></li>
-                    <li><a href="settings.html">Settings</a></li>
+                    <li><a href="/main/index.html">Home</a></li>
+                    <li><a href="/pages/lessons.html">Lessons</a></li>
+                    <li><a href="/pages/progress.html">Progress/habit tracker</a></li>
+                    <li><a href="/pages/profile.html">Profile</a></li>
+                    <li><a href="/pages/settings.html">Settings</a></li>
                 </ul>
             </div>    
         </nav>
-        </body>
+        <header>
+            <div class="container header__container">
+                <div class="header__left">
+                <h1>Welcome to the Learning Website!</h1>
+                <p>Here you can find computer science lessons.</p>
+                <a href="/pages/lessons.html" class="btn btn-primary">Get Started</a>
+                </div>
+
+                <div class="header__right">
+                    <div class="header__right-image">
+                        <img src="images/pandasmart.png" >
+                    </div>
+                </div>
+            </div>
+    </header>
+    <section class="courses">
+        <div class="container courses__container">
+            <div class="courses__left">
+                <h1>What we offer</h1>
+                <p>
+                    We offer a variety of computer science lessons, Java programming, data structures, sorting algorithms, and more. Our lessons are designed to be interactive and engaging, with lessons to help you learn. We also offer a progress tracker to help you keep track of your learning journey.
+                </p>
+                <a href="/pages/lessons.html" class="btn btn-primary">Learn more</a>
+            </div>
+        </div> 
+    </section>
+     </body>
 </html>
 
 <!-- need buttons for mobile accesss -->
