Finished homepage layout

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -1,1 +1,2 @@
-<!-- Settings page layout for learning website -->
+<!-- Courses page layout for learning website -->
+ <!--Courses with lessons for our 4 courses-->
