--- a/main/index.html
+++ b/main/index.html
@@ -49,8 +49,29 @@
                 </p>
                 <a href="/pages/lessons.html" class="btn btn-primary">Learn more</a>
             </div>
+            <div class="courses__right">
+                <article class="course">
+                    <!-- <span class="course__icon"><img src="images/datastructures.png" alt="Lesson Icon"></span> -->
+                    <h3>Data Structures</h3>
+                    <p>Learn about data structures such as arrays, linked lists, stacks, queues, trees, and graphs. Understand how to implement and use these data structures in your programming projects.</p>
+                </article>
+                <article class="course">
+                    <!-- <span class="course__icon"><img src="images/java.png" alt="Lesson Icon"></span> -->
+                    <h3>Java Programming</h3>
+                    <p>Get started with Java programming language. Learn about Java syntax, object-oriented programming concepts, and how to build applications using Java.</p>
+                </article>
+                <article class="course">
+                    <h3>Sorting Algorithms</h3>
+                    <p>Explore various sorting algorithms like bubble sort, selection sort, insertion sort, merge sort, quicksort, and more. Learn how these algorithms work and their time complexities.</p>
+                </article>
+                <article class="course">
+                    <h3>Formal Logic</h3>
+                    <p> Dive into formal logic, including propositional logic, predicate logic, and logical reasoning. Understand how to construct valid arguments and solve logical problems.</p>
+                </article>
+            </div>
         </div> 
     </section>
+    <script src="main.js"></script>
      </body>
 </html>
 
